--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "ton-core": "^0.47.1",
     "ton-crypto": "^3.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "yargs": "^17.7.0"
   },
   "devDependencies": {
-    "@types/node": "^18.13.0"
+    "@types/node": "^18.13.0",
+    "@types/yargs": "^17.0.22"
   }
 }
