--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
-    "@types/yargs": "^17.0.22"
+    "@types/yargs": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "prettier": "^2.8.2"
   }
 }
