--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
-  "scripts": {
-    "compile": "npx func-js contracts/func-lib/stdlib.fc contracts/kyc.fc --boc bin/kyc.cell",
-    "build": "tsc --build",
-    "start": "node dist/index.js",
-    "test": "npx jest ./test/*/*.spec.ts"
-  },
-  "dependencies": {
-    "@orbs-network/ton-access": "^2.2.2",
-    "@ton-community/func-js": "^0.5.0",
-    "@ton-community/sandbox": "^0.5.0",
-    "@ton-community/test-utils": "^0.0.2",
-    "@types/jest": "^29.4.0",
-    "jest": "^29.4.3",
-    "ton": "^13.3.0",
-    "ton-core": "^0.47.1",
-    "ton-crypto": "^3.2.0",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "yargs": "^17.7.0"
-  },
+  "name": "kyc-ton-hackaton",
+  "author": "eq-lab",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {},
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "@types/node": "^18.13.0",
     "@types/yargs": "^17.0.22",
