--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "lib": ["ES2020"],
     "module": "commonjs",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "target": "ES2020",
 
     "outDir": "dist",
@@ -13,5 +13,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["packages/**/src", "packages/**/test"],
 }
