--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,16 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc --build",
-    "start": "node dist/index.js",
-    "test": "npx jest test/*/*.spec.ts"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@orbs-network/ton-access": "^2.2.2",
     "@ton-community/func-js": "^0.5.0",
-    "@ton-community/sandbox": "^0.5.0",
-    "@ton-community/test-utils": "^0.0.2",
-    "@types/jest": "^29.4.0",
-    "jest": "^29.4.3",
     "ton": "^13.3.0",
     "ton-core": "^0.47.1",
     "ton-crypto": "^3.2.0",
