--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,7 +4,9 @@
     "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "test"],
+  "exclude": ["node_modules",
+    "../contracts/test"
+  ],
   "references": [
     {
       "path": "../contracts"
