--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -5,16 +5,21 @@
   "private": true,
   "scripts": {
     "compile": "npx func-js contracts/func-lib/stdlib.fc contracts/kyc.fc --boc bin/kyc.cell",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test": "npx jest test/*/*.spec.ts"
   },
   "dependencies": {
     "@orbs-network/ton-access": "^2.2.2",
     "@ton-community/func-js": "^0.5.0",
+    "@ton-community/sandbox": "^0.5.0",
+    "@ton-community/test-utils": "^0.0.2",
+    "@types/jest": "^29.4.0",
     "ton": "^13.3.0",
     "ton-core": "^0.47.1",
     "ton-crypto": "^3.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "jest": "^29.4.3"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
@@ -26,11 +31,13 @@
     "prettier": "^2.8.2"
   },
   "exports": {
-    "./common": "./dist/common/index.js"
+    "./common": "./dist/common/index.js",
+    "./kyc": "./dist/wrappers/kyc.js"
   },
   "typesVersions": {
     "*": {
-      "common": ["dist/common/index.d.ts"]
+      "common": ["dist/common/index.d.ts"],
+      "kyc": ["dist/wrappers/kyc.d.ts"]
     }
   }
 }
