fix build frontend

--- a/packages/frontend-user/package.json
+++ b/packages/frontend-user/package.json
@@ -1,14 +1,14 @@
 {
   "name": "temp",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kyc/contracts": "0.1.0",
     "@orbs-network/ton-access": "^2.3.0",
     "@tonconnect/ui-react": "^0.0.14",
     "@twa-dev/sdk": "^6.4.2",
