--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,6 +3,7 @@
   "author": "eq-lab",
   "version": "0.1.0",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc --build",
     "start": "node dist/index.js"
