--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["ES2020"],
-    "module": "ES6",
+    "module": "commonjs",
     "moduleResolution": "node",
     "target": "ES2020",
 
