rename KYC -> DID issuer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kyc-ton-hackaton",
+  "name": "did-issuer-ton-hackathon",
   "author": "eq-lab",
   "version": "0.1.0",
   "private": true,
